# open-sim

./: .gitignore  README.md  create_babbling_dataset.py  dataset.py  main.py  pyproject.toml  train_babbling.py  train_h2r.py
experiments/: create_babbling_dataset.py
open_sim/datasets/: dataset.py
open_sim/models/: mimic_video.py
